tests/errors/sem.expected-constant.directive.or
main :: () -> void {
    x := "test";
    @icall x;
};
